@@ -1667,9 +1667,13 @@ char *get_correct_jobname(
   char *dot;
   /* first suffix could be the server name or the alias */
   char *first_suffix = NULL;
+
   /* second suffix can only be the alias */
   char *second_suffix = NULL;
   int   server_suffix = TRUE;
+
+  int len;
+
   char *id = "get_correct_jobname";
 
   if ((server.sv_attr[SRV_ATR_display_job_server_suffix].at_flags & ATR_VFLAG_SET) &&
@@ -1686,12 +1690,13 @@ char *get_correct_jobname(
       }
     }
 
+  dot = NULL;
+
   /* check current settings */
   if ((server.sv_attr[SRV_ATR_job_suffix_alias].at_flags & ATR_VFLAG_SET) &&
       (server_suffix == TRUE))
     {
     /* display the server suffix and the alias */
-    int len;
     char *alias = server.sv_attr[SRV_ATR_job_suffix_alias].at_val.at_str;
 
     /* check if alias is already there */
@@ -1745,9 +1750,9 @@ char *get_correct_jobname(
     /* check for the server suffix */
     if (second_suffix != NULL)
       {
-      int len;
-      /* dot is still at the second '.' */
+      dot = second_suffix - 1;
       *dot = '\0';
+
       len = strlen(jobid) + 1 ;
 
       correct = malloc(len);
@@ -1773,7 +1778,7 @@ char *get_correct_jobname(
       }
     else
       {
-      int len = strlen(jobid) + strlen(server_name) + 2;
+      len = strlen(jobid) + strlen(server_name) + 2;
 
       correct = malloc(len);
 
@@ -1787,12 +1792,11 @@ char *get_correct_jobname(
         jobid,server_name);
       }
     } /* END if (just server_suffix) */
-  else 
+  else if (server.sv_attr[SRV_ATR_job_suffix_alias].at_flags & ATR_VFLAG_SET)
     {
     /* just the alias, not the server */
 
     char *alias = server.sv_attr[SRV_ATR_job_suffix_alias].at_val.at_str;
-    int len;
 
     if (first_suffix == NULL)
       {
@@ -1812,8 +1816,8 @@ char *get_correct_jobname(
       {
       len = strlen(alias) + 2;
 
-      if ((dot = strchr(jobid,'.')) != NULL)
-        *dot = '\0';
+      dot = first_suffix - 1;
+      *dot = '\0';
 
       len += strlen(jobid);
       correct = malloc(len);
@@ -1830,7 +1834,30 @@ char *get_correct_jobname(
 
       *dot = '.';
       }
-    } /* END else (just alias) */
+    } /* END else if (just alias) */
+  else
+    {
+    /* no server suffix nor alias */
+    if (first_suffix != NULL)
+      {
+      dot = first_suffix - 1;
+      *dot = '\0';
+      }
+
+    len = strlen(jobid) + 1;
+    correct = malloc(len);
+
+    if (correct == NULL)
+      {
+      log_err(-1,id,"ERROR:    Fatal - Cannot allocate memory\n");
+      return(NULL);
+      }
+
+    snprintf(correct,len,"%s",jobid);
+
+    if (first_suffix != NULL)
+      *dot = '.';
+    }
 
   return(correct);
 
